--- a/style/index.css
+++ b/style/index.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: ;
+    font-size: 12;
     background-color: rgb(255, 187, 0);
     border-style: double;
     margin: 50px 50px 50px 50px;
