--- a/style/index.css
+++ b/style/index.css
@@ -1,14 +1,14 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12;
-    background-color: rgb(255, 187, 0);
+    background-color: #f2f2f2;
     border-style: double;
     margin: 50px 50px 50px 50px;
     padding: 10px 10px 10px 10px;
 }
 
 div.first {
-    background-color: rgb(223, 223, 204);
+    background-color: #ffffff;
     border-style: double;
     padding: 5px 5px 5px 10px;
 }
