--- a/style/index.css
+++ b/style/index.css
@@ -1,13 +1,38 @@
-body {
+@charset "UTF-8";
+
+* {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12;
-    background-color: #f2f2f2;
-    border-style: double;
-    margin: 50px 50px 50px 50px;
-    padding: 10px 10px 10px 10px;
 }
 
-div.first {
+p {
+    text-align: center;
+}
+
+body {
+    /*font-family: Arial, Helvetica, sans-serif;
+    font-size: 12;*/
+    background-image: linear-gradient(to bottom, #e8fdff,#dcf2f0);
+    /*border-style: double;*/
+    /*margin: 50px 50px 50px 50px;
+    padding: 10px 10px 10px 10px;*/
+}
+
+main {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px #141489;
+    width: auto;
+    padding: 10px;
+    margin: auto;
+}
+
+h1 {
+    color: #141489;
+    text-align: center;
+    text-shadow: 1px 1px 2px rgba(36, 36, 138, 0.6);
+}
+
+/*div.first {
     background-color: #ffffff;
     border-style: double;
     padding: 5px 5px 5px 10px;
@@ -16,4 +41,4 @@ div.first {
 div.second {
     text-align: center;
     border-style: outset;
-}
+}*/
