--- a/style/index.css
+++ b/style/index.css
@@ -158,7 +158,7 @@ h3 {
     font-weight: 200;
 
     color: #0f8dbf;
-    text-shadow: 2px 2px 4px #233bb480;
+    text-shadow: 2px 2px 3px hsla(230, 67%, 42%, 0.4);
     text-align: center;
 }
 
