--- a/style/index.css
+++ b/style/index.css
@@ -352,8 +352,8 @@ article.services > p {
     font: normal 1em 'Raleway', sans-serif;
     text-align: center;
 
-    max-height: 173px;
-    overflow-y: scroll;
+    /*max-height: 173px;
+    overflow-y: scroll;*/
 
     margin: auto;
     padding: 20px;
