--- a/style/index.css
+++ b/style/index.css
@@ -106,16 +106,16 @@ a {
 }
 
 /*--------------------CORPO DO SITE--------------------*/
-/*** {
+* {
     margin: 0px;
     padding: 0px;
-}*/
+}
 
 header {
     background-image: var(--colorbackgroundheader);
 
-    margin-left: -8px;
-    margin-right: -8px;
+    /*margin-left: -8px;
+    margin-right: -8px;*/
     padding: 1px;
 }
 
@@ -143,7 +143,7 @@ footer {
     background-image: var(--colorbackgroundfooter);
 
     padding: 1px 0px 1px 0px;
-    margin: 20px -8px -10px -8px;
+    /*margin: 20px -8px -10px -8px;*/
 }
 
 /*--------------------TITLES--------------------*/
@@ -184,7 +184,7 @@ nav#languagemenu {
     text-align: right;
     background-image: linear-gradient(to bottom, #0d0d0d,#141489);
 
-    margin: -8px -8px 0px -8px;
+    /*margin: -8px -8px 0px -8px;*/
     padding-top: 12px;
     padding-bottom: 10px;
 }
